fixed some responsive issues on iphone 11

--- a/style.css
+++ b/style.css
@@ -91,7 +91,6 @@ a:-webkit-any-link {
     display:flex;
     justify-content: center;
     align-items:center;
-    margin-left:1em;
     font-size:2.3em;
     text-align:center;
 }
@@ -114,7 +113,6 @@ a:-webkit-any-link {
     display:flex;
     justify-content: center;
     align-items: center;
-    margin-top:1.2em;
     margin-left:-2em;
     padding:1.1em;
     font-size:1.1em;
@@ -149,7 +147,7 @@ a:-webkit-any-link {
     width: auto;
     position:absolute;
     margin-left:3%;
-    margin-top: -3em;
+    margin-top: -5em;
     padding:1.1em;
     border-radius:1em;
     background-color: gray;
